gcc/testsuite/algol68/compile/error-mode-stropping-15.a68
# { dg-options "-fstropping=upper" }  #
BEGIN SHORT SHORT INT j;
      j := "joo" { dg-error "CHAR.*SHORT SHORT INT" }
END
